[build-system]
requires = ["setuptools>=40.8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scarab-sim"
version = "1.0.0"
description = "A simulation framework for entity-based, time-stepped simulations."
readme = { file = "README.md", content-type = "text/markdown" }
authors = [
    { name = "Bill Back", email = "billback@mac.com" }
]
license = { text = "MIT" }  # Update this if your license changes
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Life",
    "Topic :: Software Development :: Libraries",
]
keywords = ["simulation", "framework", "entities", "time-simulation"]

dependencies = [
    "aioconsole>=0.8.0",
    "iniconfig>=2.0.0",
    "numpy>=2.1.1",
    "packaging>=24.1",
    "pluggy>=1.5.0",
    "sortedcontainers>=2.4.0",
    "toml>=0.10.2",
    "websockets>=13.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.2",
    "setuptools>=74.1.2",
]

[project.scripts]
scarab-cli = "tools.cli:main"

[tool.setuptools.packages]
find = { include = ["scarab*"], exclude = ["images", "experiments"] }
