[build-system]
requires = ["setuptools>=40.8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scarab-sim"
version = "1.0.0"
# … your existing metadata …
requires-python = ">=3.7"

# Add console‐script entry points
[project.scripts]
scarab-beehive = "scarab.examples.beehive.beehive_sim:main"
scarab-simple-sim = "scarab.tools.simple_sim:main"
scarab-ws-cli = "scarab.tools.ws_cli:main"
scarab-ws-event-logger = "scarab.tools.ws_event_logger:main"

# Tell setuptools to include package data
[tools.setuptools]
include-package-data = true

[tool.setuptools.packages]
find = { include = ["scarab*"], exclude = ["images", "experiments"] }

# Explicitly list the data files you want included:
[tool.setuptools.package-data]
# include the example.toml in the beehive folder
"scarab.examples.beehive" = ["example.toml"]
# include *all* files in webui (css, js, html, ico, etc)
"scarab.examples.beehive.webui" = ["*"]

# Configure pytest
[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
